--- a/views/ownerBlogs.ejs
+++ b/views/ownerBlogs.ejs
@@ -5,14 +5,13 @@
     
     <h3>Welcome to the House of Stories!</h3>
     
-    <% blogs.reverse() %> 
+    <% authorBlogs.reverse() %> 
     
-    <% blogs.forEach(blog => { %>
+    <% authorBlogs.forEach(blog => { %>
 
     <div class="card mt-3">
         <div class="card-body">
-            <p class="text-muted">published at: <%= blog.postedAt %> </p>
-            <p><%= blog.author.author_name %> </p>            
+            <p class="text-muted">published at: <%=blog.postedAt %> </p>        
             <h5 class="card-title"><%= blog.title %> </h5>
             <p class="card-text"><%= blog.description %></p>
             <p class="card-text"><%= blog.content.slice(0, 99) %> .... <a href="/blog/<%= blog._id %>">Read More</a></p>
