--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <div class="card mt-3">
         <div class="card-body">
             <p class="text-muted">published at: <%= blog.postedAt %> </p>
+            <p class="text-muted"><%= blog.reading_time %> min read </p>
             <p><%= blog.author.author_name %> </p>
             <h5 class="card-title"><%= blog.title %> </h5>
             <p class="card-text"><%= blog.description %></p>
@@ -25,5 +26,13 @@
 
 
 </div>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        <% for (let num = 1; num <= pages; num++) { %>
+      <li class="page-item"><a class="page-link" href="?page=<%= num; %>">
+        <%= num; %></a></li><% } %>
+    </ul>
+  </nav>
 
 <%- include("../public/partials/footer") %>
