--- a/views/ownerBlogs.ejs
+++ b/views/ownerBlogs.ejs
@@ -11,7 +11,8 @@
 
     <div class="card mt-3">
         <div class="card-body">
-            <p class="text-muted">published at: <%=blog.postedAt %> </p>        
+            <p class="text-muted">published at: <%=blog.postedAt %> </p>
+            <p class="text-muted"><%= blog.reading_time %> min read </p>        
             <h5 class="card-title"><%= blog.title %> </h5>
             <p class="card-text"><%= blog.description %></p>
             <p class="card-text"><%= blog.content.slice(0, 99) %> .... <a href="/blog/<%= blog._id %>">Read More</a></p>
@@ -24,5 +25,13 @@
 
 
 </div>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        <% for (let num = 1; num <= pages; num++) { %>
+      <li class="page-item"><a class="page-link" href="?page=<%= num; %>">
+        <%= num; %></a></li><% } %>
+    </ul>
+  </nav>
 
 <%- include("../public/partials/footer") %>
