--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -2,7 +2,7 @@
 <%- include("../public/partials/header") %>
 
 <div class="container mt-5">
-    <form action="/edit/<%= blog._id %>" method="POST">
+    <form action="/edit/<%= blog._id %>" method="PUT">
         <input type="text" name="title" placeholder="Title" class="form-control" required>
         <input type="text" name="description" placeholder="Give a short description of your story" class="mt-3 form-control" required>
         <textarea name="content" cols="30" rows="10" class="mt-3 form-control" placeholder= "make changes"  required></textarea>
